--- a/Student_Data_Challenge.ipynb
+++ b/Student_Data_Challenge.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "34266c40-c789-42cd-802f-83eedddc4138",
    "metadata": {},
    "outputs": [],
@@ -1143,18 +1143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "8eac115a-c392-446c-ad83-456d0f87eca7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\micha\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:2: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-      "  \n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1176,46 +1168,42 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
+       "      <th>school_budget</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>school_type</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Charter</th>\n",
-       "      <td>72.450603</td>\n",
-       "      <td>66.761883</td>\n",
+       "      <td>872625.656236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Public</th>\n",
-       "      <td>72.281219</td>\n",
-       "      <td>62.951576</td>\n",
+       "      <td>911195.558251</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             reading_score  math_score\n",
-       "school_type                           \n",
-       "Charter          72.450603   66.761883\n",
-       "Public           72.281219   62.951576"
+       "             school_budget\n",
+       "school_type               \n",
+       "Charter      872625.656236\n",
+       "Public       911195.558251"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use groupby and mean to find the average reading and math scores for each school type.\n",
-    "sch_type = student_df3.groupby('school_type')['reading_score','math_score'].mean()\n",
-    "sch_type"
+    "budget = student_df3.groupby('school_type')['school_budget'].mean()\n",
+    "pd.DataFrame(budget)"
    ]
   },
   {
@@ -1366,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "3e9018ab-17db-431d-98ef-0c7195b647bb",
    "metadata": {},
    "outputs": [
@@ -1392,17 +1380,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>student_id</th>\n",
-       "      <th>reading_score</th>\n",
        "      <th>math_score</th>\n",
-       "      <th>school_budget</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>school_type</th>\n",
        "      <th>grade</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1410,86 +1392,62 @@
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">Charter</th>\n",
        "      <th>9</th>\n",
-       "      <td>7.054029e+07</td>\n",
-       "      <td>68.676790</td>\n",
        "      <td>70.077874</td>\n",
-       "      <td>863817.290130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>7.091191e+07</td>\n",
-       "      <td>69.628822</td>\n",
        "      <td>66.443206</td>\n",
-       "      <td>871823.608811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>6.891231e+07</td>\n",
-       "      <td>80.596379</td>\n",
        "      <td>68.024735</td>\n",
-       "      <td>874262.713649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>6.958624e+07</td>\n",
-       "      <td>70.475421</td>\n",
        "      <td>60.212121</td>\n",
-       "      <td>885096.335017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">Public</th>\n",
        "      <th>9</th>\n",
-       "      <td>6.919327e+07</td>\n",
-       "      <td>69.687981</td>\n",
        "      <td>63.771066</td>\n",
-       "      <td>926800.159528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>6.976258e+07</td>\n",
-       "      <td>73.160461</td>\n",
        "      <td>63.764121</td>\n",
-       "      <td>914715.360382</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>6.847275e+07</td>\n",
-       "      <td>73.486448</td>\n",
        "      <td>59.314337</td>\n",
-       "      <td>900248.905136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>7.033909e+07</td>\n",
-       "      <td>73.342380</td>\n",
        "      <td>63.568319</td>\n",
-       "      <td>895952.915971</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     student_id  reading_score  math_score  school_budget\n",
-       "school_type grade                                                        \n",
-       "Charter     9      7.054029e+07      68.676790   70.077874  863817.290130\n",
-       "            10     7.091191e+07      69.628822   66.443206  871823.608811\n",
-       "            11     6.891231e+07      80.596379   68.024735  874262.713649\n",
-       "            12     6.958624e+07      70.475421   60.212121  885096.335017\n",
-       "Public      9      6.919327e+07      69.687981   63.771066  926800.159528\n",
-       "            10     6.976258e+07      73.160461   63.764121  914715.360382\n",
-       "            11     6.847275e+07      73.486448   59.314337  900248.905136\n",
-       "            12     7.033909e+07      73.342380   63.568319  895952.915971"
+       "                   math_score\n",
+       "school_type grade            \n",
+       "Charter     9       70.077874\n",
+       "            10      66.443206\n",
+       "            11      68.024735\n",
+       "            12      60.212121\n",
+       "Public      9       63.771066\n",
+       "            10      63.764121\n",
+       "            11      59.314337\n",
+       "            12      63.568319"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "budget = student_df3.groupby(['school_type','grade'])\n",
-    "budget.mean()"
+    "mathscore = student_df3.groupby(['school_type','grade'])['math_score'].mean()\n",
+    "pd.DataFrame(mathscore)"
    ]
   },
   {
@@ -1506,7 +1464,7 @@
    "id": "396f269c-7081-4e43-a203-0a2750b51fa4",
    "metadata": {},
    "source": [
-    "Based on the results of the analysis in Deliverable 5, it would appear that on average, charter schools have a higher average reading score and average math score than public schools. It would also appear that by grade level, charter schools have a smaller budget than public schools for each grade level. This does not necessarily mean that charter schools are better than public schools, as it can be seen in the last part of Deliverable 5 that some of the average scores in public schools are greater than their counterparts in charter schools. Thus, it can be theorized that charter and public schools are not evenly weighted across the grades, with certain grades dragging their respective school type's scores to a degree that is less indictative of their true results."
+    "Based on the results of the analysis in Deliverable 5, it would appear that on average, charter schools have a higher average math score than public schools except for in grade 12. It would also appear that charter schools have a smaller budget than public schools. This does not necessarily mean that charter schools are better than public schools, as there might be possible other variables in play, but it seems likely that in terms of math scores, charter schools are better than public schools."
    ]
   },
   {
